--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+</head>
+<body>
+    <h1>HEI MARIE SKOGSTRAND GJERDEN! </h1>
+    <p>HÅPER DU LIKER BILDET AV DEG OG MAGNUS:</p>
+    <img src="img.jpg" alt="KOSELIG">
+</body>
+</html>
+
