--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>HEI MARIE SKOGSTRAND GJERDEN! </h1>
-    <p>:</p>
+    <p>testting</p>
     <img src="img.jpg" alt="KOSELIG">
 </body>
 </html>
